Shiv's on-leave

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -59,7 +59,7 @@
     - Privacy, Policy & Social Computing
   website: https://www.cs.colorado.edu/~lv/
 
-- name: Shivakant Mishra (On-Sabbatical)
+- name: Shivakant Mishra (On-Leave)
   image_url: /assets/img/faculty/shiv.png
   areas:
     - Data & IoT Analytics
