--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -7,20 +7,22 @@
 - name: Yueqi Chen
   image_url: /assets/img/faculty/yueqi-chen.jpeg
   areas:
-    - Systems & Software Security
+    - Anticensorship and Software Security
+    - Quantum Computing
   website: http://cusecurity.cs.colorado.edu/yueqichen/
 
 - name: Lijun Chen
   image_url: /assets/img/faculty/lijun.png
   areas:
     - Control & Optimization of Complex Systems
+    - Quantum Computing
   website: https://spot.colorado.edu/~lich1539/
 
 - name: Dirk Grunwald (Retired)
   image_url: /assets/img/faculty/dirk-head.png
   areas:
     - Networking, Wireless & Mobile Systems
-    - Systems & Software Security
+    - Anticensorship and Software Security
     - Storage, Memory & Nonvolatile Systems
   website: https://www.colorado.edu/cs/dirk-grunwald
   linkedin: https://www.linkedin.com/in/dirk-grunwald-7735202
@@ -71,7 +73,7 @@
 - name: Eric Wustrow
   image_url: /assets/img/faculty/wustrow.png
   areas:
-    - Systems & Software Security
+    - Anticensorship and Software Security
   website: https://ericw.us/trow/
 
 - name: Mark Zhao
