--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,5 +1,4 @@
 - title: Retirement BBQ
   description: The lab gave a retirement party with barbeque.
   image_url:
-  - /assets/img/gallery/bbq-2.jpg
-  - /assets/img/gallery/bbq-7.jpg
+  - /assets/img/bbq-7.jpg
